@@ -1,0 +1,2 @@
+PHP is a programming language designed to be embedded into web pages.
+This extension embeds Perl Interpreter into PHP.
