@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1.1.1 2009/07/03 07:40:05 manu Exp $
+
+SHA1 (php-perl/perl-1.0.0.tgz) = 5886c5c6f03d723e213092fce122efc3482bb0f1
+RMD160 (php-perl/perl-1.0.0.tgz) = 3bce7679c7575c3de554be521514f4c74cc6fac4
+Size (php-perl/perl-1.0.0.tgz) = 24358 bytes
